--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,500,0,0" />
   <link rel="stylesheet" href="index.css" />
   <title>Croche</title>
 </head>
@@ -20,6 +22,18 @@
     <div class="recipe-info">
       <h3 id="recipe-name"></h3>
     </div>
+    <div class="outer-steps" id="outer-steps"></div>
+  </div>
+  <div class="floating-buttons">
+    <button class="question-button" id="question-button"><span class="material-symbols-outlined">
+        help_outline
+      </span></button>
+    <button class="back-button" id="back-button" onclick="undoCompleted()"><span class="material-symbols-outlined">
+        navigate_before
+      </span></button>
+    <button class="next-button" id="next-button" onclick="setNextCompleted()"><span class="material-symbols-outlined">
+        navigate_next
+      </span></button>
   </div>
   <script src="recipe.js"></script>
   <script src="index.js"></script>
