add keyboard listeners and help message

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="outer-steps" id="outer-steps"></div>
   </div>
   <div class="floating-buttons">
-    <button class="question-button" id="question-button"><span class="material-symbols-outlined">
+    <button class="question-button" id="question-button" onclick="showHelpMessage()"><span
+        class="material-symbols-outlined">
         help_outline
       </span></button>
     <button class="back-button" id="back-button" onclick="undoCompleted()"><span class="material-symbols-outlined">
